fix preferences and made it more readable

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,5 +1,3 @@
 .navbar-logo {
-  background: none;
-  border: none;
   width: 30px;
 }
